# multimodal-gemma-270m

./: .gitignore  Dockerfile  Makefile  README.md  app_local.py  dvc.yaml  evaluate.py  gradio_app.py  inference.py  pyproject.toml  quick_test.py  requirements.txt  simple_test.py  space_app.py  train.py  upload_to_hf.py  validate_fixes.py
.github/workflows/: train_deploy.yml
configs/: config.yaml  data_config.yaml  gemma_270m_a100.yaml  model_config.yaml  multimodal_optimized.yaml  test_config.yaml  training_config.yaml
frontend/: README.md  package.json  start.sh
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/backend/: main.py  requirements.txt
hf_space/: README.md  app.py  requirements.txt
samples/: REFERENCE_SECRET.md
samples/inference_results/: predictions.txt
scripts/: deploy_to_hf.py  download_checkpoint.py  download_data.py  evaluate.py  prepare_data.py  upload_checkpoint.py  validate_model.py
src/: __init__.py  trace_model.py
src/data/: __init__.py  datamodule.py  dataset.py  processors.py
src/models/: __init__.py  lightning_module.py  multimodal_gemma.py  projectors.py
src/training/: __init__.py  callbacks.py  sample_callback.py  utils.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_app.py  test_model.py
