[project]
name = "multimodal-gemma-270m"
version = "1.0.0"
description = "MLOps-enabled Multimodal Gemma-270M with automatic deployment to HuggingFace Spaces"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLOps Pipeline"}
]
keywords = ["multimodal", "gemma", "llm", "vision-language", "pytorch-lightning", "mlops"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "gradio>=4.0.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.19.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "nvitop>=1.6.1",
    "datasets>=4.5.0",
    "bitsandbytes>=0.49.1",
    "mlflow>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
dvc = [
    "dvc>=3.0.0",
    "dvc-gdrive>=3.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "ANN101", "ANN102", "D100", "D104", "D107", "D203", "D213"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::UserWarning:lightning.pytorch.trainer.connectors.data_connector",
    "ignore:You are trying to `self.log\\(\\)` but the `self.trainer`:UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:",
]
